--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Cadastrar" />
         <activity android:name=".Menu" />
         <activity android:name=".GerNotas" />
-        <activity android:name=".Nota"></activity>
+        <activity android:name=".Nota" />
+        <activity android:name=".CadastrarAgenda"></activity>
     </application>
 
 </manifest>
